--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
         overflow: hidden;
         margin: 0px
       }
+      body{
+        margin:0px;
+      }
     </style>
   </head>
   <body>
